[package]
name = "simple-single-tcp"
version = "0.1.0"
authors = ["Josua Schmid <josua.schmid@renuo.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
